# stm32_alarm_node

./: CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
test/: CMakeLists.txt
test/alarm_node/: CMakeLists.txt  main.cpp
